--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "author": "rithintom",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongoose": "^8.15.1",
-    "nocache": "^4.0.0"
+    "nocache": "^4.0.0",
+    "nodemailer": "^7.0.3",
+    "uuid": "^11.1.0"
   }
 }
